--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,12 @@
+html,
+body,
+#root{
+  height: 100%;
+  margin: 15px;
+  margin-bottom: 0px;
+  font-family: 'Oxygen', sans-serif;
+}
+
 /*define custom properties */
 /*Store Styles */
 :root {
@@ -6,8 +15,10 @@
   --border-radius: 4px;
 }
 
+/* Style for Total.js */
 #currency-filters-container {
   margin-bottom: 24px;
+  
 }
 
 #currency-filters-container h3 {
@@ -37,3 +48,47 @@
   color: white;
 }
 
+/* Style for Inventory.js */
+#inventory-container {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:flex-start;
+  gap: 12px;
+  padding: 0px;
+}
+.inventory-item {
+  flex: 1;
+}
+.inventory-item > img {
+  border: 1px solid var(--black);
+  padding: 24px;
+  border-radius: var(--border-radius);
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.inventory-item > h3 {
+  margin-bottom: 4px;
+  margin-top: 12px;
+}
+
+.price {
+  color: var(--purple);
+}
+
+.add-to-cart-button {
+  background: none;
+  color: var(--black);
+  border: 1px solid var(--black);
+  border-radius: var(--border-radius);
+  padding: 4px 8px;
+  font-weight: 600;
+  margin-top: 12px;
+  cursor: pointer;
+}
+
+.add-to-cart-button:hover{
+  color: white;
+  background: var(--black);
+}
