move data accessing method from Inventory component to App component, so App would be the the only stateful component in the app. Inventory, Currency, Total and Cart are all stateless components, which means they don't own any state. The reason for this refactoring is for using Redux to handle state management through the app. In that case, App would be responsible for passing store slices and dispatcher to children components.

--- a/public/index.css
+++ b/public/index.css
@@ -95,6 +95,7 @@ body,
 
 /*style for cart.js */
 .cart-container{
+  margin: 0 -45px;
   padding: 12px 45px;
   padding-bottom: 24px;
   background: #f2f2f2;
