--- a/public/index.css
+++ b/public/index.css
@@ -1,12 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@400;600;700&display=swap');
+
 html,
 body,
-#root{
+#root,
+#app {
   height: 100%;
   margin: 15px;
   margin-bottom: 0px;
   font-family: 'Oxygen', sans-serif;
 }
 
+#app {
+  display: flex;
+  flex-direction: column;
+  color: #141c3a;
+}
 /*define custom properties */
 /*Store Styles */
 :root {
